2005-05-25  Brian Wellington <bwelling@xbill.org>
	* client/common/client.c, server/pregame.c: Send the number
	of development cards that have been bought to connecting clients,
	so that the client's state is correct after a reconnect.

2005-05-22  Roland Clobus <rclobus@bigfoot.com>
	* apply 'make indent' again

2005-05-19  0.9.15  Roland Clobus <rclobus@bigfoot.com>
	* nearly all: replaced numElems and UNUSED macros by the GLib macros
	G_N_ELEMENTS and G_GNUC_UNUSED
	
2005-05-17  0.9.14  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c (resource_desire): Fixed a typo from 0.9.13

2005-05-16  0.9.13  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c (resource_desire): Don't consider resources that
	have no value (fixes monopoly deadlock)
	
2005-05-15  Brian Wellington <bwelling@xbill.org>
	* client/ai/greedy.c: Rework the AI's maritime trading code to
	reduce the number of pointless trades and increase the effectiveness
	of trades.

2005-05-15  0.9.12  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/common_gtk.c: Removed GTK compatibility code. It is not
	needed since 2.4 is required.
	* common/gtk/guimap.c: Moved comments back that were moved by a make
	indent, such that the translators see them again.
	
2005-05-01  0.9.11  Roland Clobus <rclobus@bigfoot.com>
	* server/gtk/gnocatan-server-gtk.c (main): Enabled translations in the
	menu.
	* editor/gtk/editor.c: Use GINT_TO_POINTER and GPOINTER_TO_INT
	* editor/gtk/editor.c, editor/gtk/game-buildings.c,
	editor/gtk/game-devcards.c: Enabled some translations.
	* client/gtk/settingsscreen.c: Fixed a string

2005-04-24  Brian Wellington <bwelling@xbill.org>
	* common/map.[ch]: Add map_add_hex().
	* client/gtk/gui.c, common/gtk/guimap.[ch]: Move map widget and
	event handling code to guimap.c

2005-04-24  Brian Wellington <bwelling@xbill.org>
	* common/gtk/guimap.[ch]: Add guimap_find_hex().

2005-04-20  Brian Wellington <bwelling@xbill.org>